case and lead delete,
Former-commit-id: 938b444fe6094810c17c6bf5a626286717dca0ce [formerly 36f8423e0f45f6572d5b9f339ba793fa02426a2d] [formerly bf47cae71307592c97484dce673b22086bcfe8e9 [formerly 89a0acbab0637b0dce6aa56ba2383b0849b9a205]]
Former-commit-id: b3ca91bb5d2c9e4bbcfb79e90efe63525a2b92de [formerly f0311b03ed60b7f997ce6a3ce5b17e7ebf925644]
Former-commit-id: 94fc056e968b8d3e414a54c670220ea3bc013242

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -450,6 +450,44 @@
 
 <!-- tasks cards -->
 <div class="col-md-3 tasks-col">
+ <div class="row">
+                        <div class="col-md-12">
+                             <div class="portlet showPage rightCardContent">
+                                  <div class="col-md-12">
+                                            <ul class="list-unstyled contactInfos">
+                                              <li ng-show="account.account_type">
+                                                <span>
+                                                    {{_('Type:')}}
+                                                    <a class="tag ng-binding" href="/#/search/type:Account #<%= account.account_type %>">
+                                                        #<%= account.account_type %>
+                                                    </a>
+                                                </span>
+                                              </li>
+                                              <li ng-show="account.industry">
+                                                <span>
+                                                    {{_('Industry:')}}
+                                                    <a class="tag ng-binding" href="/#/search/type:Account  #<%= account.industry %>">
+                                                        #<%= account.industry %>
+                                                    </a>
+                                                </span>
+                                              </li>
+                                              <li ng-show="casee.owner">
+                                                <span>
+                                                   {{_('Owner:')}}
+                                                  <a class="tag ng-binding" href="/#/search/type:Case owner:<%= casee.owner.google_user_id %>">
+                                                    #<%= casee.owner.google_display_name %>
+                                                  </a>
+                                                </span>
+                                              </li>
+                                              <li>
+                                                <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(account.updated_at)%> </span>
+                                              </li>
+                                            </ul>
+                                        </div>  
+                                <div class="clearfix"></div>
+                              </div>
+                        </div>
+</div>
   <div class="row">
     <div class="col-md-12">
 <div class="portlet showPage rightCardContent">
