--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -156,14 +156,13 @@
                     <tr>
                         <th>
                         </th>
-                        <th >                          
-                            <a href="" ng-click="filterBy('account.name')"> {{ _(' Name')}}</a>
-                        </th>
+                    
                         <th >                          
                             <a href="" ng-click="filterBy('name')"> {{ _(' Opportunity')}}</a>
                             <i class="fa fa-caret-up" ng-show="fltby == '-name'"></i>
                             <i class="fa fa-caret-down" ng-show="fltby == 'name'"></i>
                         </th>
+                        
                         <th >                          
                             <a href="" ng-click="fltby = 'title'; reverse=false"> {{ _(' Amount')}}</a>
                         </th>
@@ -173,6 +172,9 @@
                           <a href=""  ng-click="filterBy('stage')" > {{ _(' Stage')}}</a>
                           <i class="fa fa-caret-up" ng-show="fltby == '-stage'"></i>
                           <i class="fa fa-caret-down" ng-show="fltby == 'stage'"></i>
+                        </th>
+                        <th>                          
+                            <a href="" ng-click="filterBy('account.name')"> {{ _(' Related to')}}</a>
                         </th>
                           <th style=" width: 100px; ">                          
                             <a href="" ng-click="fltby = 'updated_at'; reverse=false" > {{ _(' Last update')}}</a>
@@ -184,11 +186,7 @@
                         <td>
                           <input title="Select all Users" type="checkbox" ng-checked="isSelectedCard(opportunity)" ng-click="selectCardwithCheck($event,$index,opportunity)" >
                         </td>
-                        <td style="word-wrap: break-word;max-width:200px">
-                            <a href="/#/accounts/show/<%= opportunity.account.id %>" style=" font-size: 15px; font-weight: bold; ">
-                             <%= opportunity.account.name %>
-                                        </a>
-                        </td>
+                       
                         <td>
                           <div class="nameContainer" style="max-width:210px font-size:15px">
                             <a href="/#/opportunities/show/<%= opportunity.id %>" style=" font-size: 15px; " class="profile-link">
@@ -200,6 +198,7 @@
                              <div class="clearfix"></div>
                           </div>
                         </td>
+                      
                         <td>
                             <span style=" font-size: 16px; text-align: center; "><%= opportunity.currency %> <%= opportunity.amount_total | customCurrency:"":",":".":0 %></span><br>
                             <span style=" color: rgb(156, 156, 156); font-size: 13px; " class="amount-details" ng-show="opportunity.duration_unit!='fixed'">
@@ -217,6 +216,17 @@
                                 
                               </div>
                            </div>
+                        </td>
+                        <td style="word-wrap: break-word;max-width:200px">
+                            <a href="/#/accounts/show/<%= opportunity.account.id %>" style=" font-size: 15px; font-weight: bold; ">
+                             <%= opportunity.account.name %>
+                             </a>
+                             <!--  <span ng-show="opportunity.contact.firstname||opportunity.contact.lastname">
+                              <a href="/#/contacts/show/<%= opportunity.contact.id %>" style=" font-size: 15px; font-weight: bold; ">
+                                 <%= opportunity.contact.firstname %>   
+                                 <%= opportunity.contact.lastname %> 
+                              </a>(contact)
+                              </span> -->
                         </td>
                         <td style=" font-size: 11px; ">
                           <%=fromNow(opportunity.updated_at)%>
