--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -32,7 +32,7 @@
                   <h2 class="page-title">
             <a href="/#/opportunities" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Opportunities")}} > <%= opportunity.name %>  </h2>
-            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(opportunity)">{{ _('Create')}}</button>
+            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="validateBeforeSave(opportunity)">{{ _('Create')}}</button>
   </div>
   </div>
 </div>
@@ -62,7 +62,7 @@
       <div class="row">
           <div class="showPage col-md-12 newActionsBtn">
           <span>{{_('Create Opportunity')}} </span>
-          <button class="btn red newAccountBtn pull-right" ng-click="save(opportunity)">{{_('Create')}}</button>
+          <button class="btn red newAccountBtn pull-right" ng-click="validateBeforeSave(opportunity)">{{_('Create')}}</button>
           <div class="clearfix"></div>
         </div>
        <div class="showPage slimForm col-md-12 margin-bottom-15">
@@ -75,7 +75,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <div class="col-md-12">
+                  <div class="col-md-12" ng-class="{ 'has-error': oppo_err.name}">
                     <input autofocus ng-model="opportunity.name" placeholder="{{_('Type here the opportunity name...')}}" type="text" class="form-control" required>
                   </div>
                 </div>
@@ -89,7 +89,7 @@
                         <div class="row">
                           <div class="col-md-12">
                             <div class="form-group">
-                              <div class="col-md-7 sm-margin-bottom-15 ">
+                              <div class="col-md-7 sm-margin-bottom-15 " ng-class="{ 'has-error': oppo_err.amount_per_unit}">
                                   <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit ">
                                </div>
                               <div class="col-md-5 ">
@@ -194,7 +194,7 @@
                         <div class="row">
                           <div class="col-md-12">
                             <div class="form-group">
-                              <div class="col-md-12">
+                              <div class="col-md-12" ng-class="{ 'has-error': oppo_err.account}" >
                                  <input type="text" required  ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}">
                               </div>
                             </div>
