--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 </ul>
               </li> -->        
               <li class="dropdown user">
-                <a href="/#/admin/users" class="dropdown-tog">
+                <a href="/apps/{{ admin_app.key.id() }}" class="dropdown-tog">
                   <span class="username inviteUsers">
                     {{_('+ Invite Users')}}
                   </span>
