--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1252,6 +1252,44 @@
      <!-- tasks cards -->
 <div class="col-md-3 tasks-col">
   <div class="row">
+                <div class="col-md-12">
+                     <div class="portlet showPage rightCardContent">
+                          <div class="col-md-12">
+                                    <ul class="list-unstyled contactInfos">
+                                      <li ng-show="account.account_type">
+                                        <span>
+                                            {{_('Type:')}}
+                                            <a class="tag ng-binding" href="/#/search/type:Account #<%= account.account_type %>">
+                                                #<%= account.account_type %>
+                                            </a>
+                                        </span>
+                                      </li>
+                                      <li ng-show="account.industry">
+                                        <span>
+                                            {{_('Industry:')}}
+                                            <a class="tag ng-binding" href="/#/search/type:Lead  #<%= account.industry %>">
+                                                #<%= account.industry %>
+                                            </a>
+                                        </span>
+                                      </li>
+                                      <li ng-show="lead.owner">
+                                        <span>
+                                           {{_('Owner:')}}
+                                          <a class="tag ng-binding" href="/#/search/type:Lead owner:<%= lead.owner.google_user_id %>">
+                                            #<%= lead.owner.google_display_name %>
+                                          </a>
+                                        </span>
+                                      </li>
+                                      <li>
+                                        <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(account.updated_at)%> </span>
+                                      </li>
+                                    </ul>
+                                </div>  
+                        <div class="clearfix"></div>
+                      </div>
+                </div>
+            </div>
+  <div class="row">
     <div class="col-md-12">
          <div class="portlet showPage rightCardContent">
                 <div class="portlet-title line">
