Change the logo by uploading the image , fix #1441
Former-commit-id: 309787338c2366b2578049d98a73fb9825aecd50 [formerly 3f7671b651c20c369e0be8debe7ed658f8028748] [formerly 37dd9c03e4715a6586d2fb2ee5e73dc502749e73 [formerly fe4b947ad43d1801e7bbc5b5e39a31d81aa68a1a]]
Former-commit-id: e32d2807174d0d5aaf4fd5f64e0633929ca36d95 [formerly 3d7adbf0452f83ebc9ad8cb2e249fa13243008b3]
Former-commit-id: 2b38889b04955445fb81a6c9fe56abf815ec1c18

--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -68,6 +68,10 @@
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==3}">
                     <a ng-click="waterfall(); selectedTab = 3;">{{ _('Lead Status')}}</a>
                   </li>
+                  <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==4}">
+                    <a ng-click="createPickerUploader()">{{ _('Update your Logo')}}</a>
+                  </li>
+
 
                 </ul>
               </div>
