--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -806,7 +806,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button> -->
               <h3 id="myModalLabel" class="modal-title">{{_("New Event")}}</h3>
             </div>
             <div class="modal-body">
