--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
 <head>
   <meta charset="utf-8" />
   <title>i/oGrow Engine Platform</title>
+<!--   <meta http-equiv="Cache-control" content="no-cache">
+  <meta http-equiv="Expires" content="-1"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta content="" name="description"/>
@@ -115,15 +117,27 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     <!-- BEGIN TOP NAVIGATION BAR -->
     <div class="header-inner"   >
       <!-- BEGIN LOGO -->
-     <!--  <a class="navbar-brand" href="/#/leads"> -->
-      <div ng-controller="SearchFormController">
-     <a  class="navbar-brand" ng-click="createPickerUploader()">
+     <!--  <a class="navbar-brand" > -->
+      <div ng-controller="SearchFormController" >
+     <a  class="navbar-brand" href="/#/leads"  onmouseover="ShowUpdateLogo()"  onmouseout="HideupdateLogo()">
+          
        {% if logo != None %}
-        <img src="{{logo.fileUrl}}" alt="logo" class="img-responsive" style="width:100px ;height:32px;">
+        <img src="{{logo.fileUrl}}" alt="logo" class="img-responsive" style="width:100px ;height:32px;"/>
         {% else%}
         <img src="http://storage.googleapis.com/iogrow-gs/iogrow-logo-app.png" alt="logo" class="img-responsive"/>
+         {% if user.is_admin %}
+          <span id="update_logo_pan" class="update-Logo"  ng-click="createPickerUploader()"   style="display:none;">
+                                    <img src="/static/img/upload_logo.png" style="
+    margin-left: -2px;
+    padding: 2px;
+    width: 24px;
+"> {{_('UpLoad your Logo')}}
+          </span>
+          {% endif %}
         {% endif %}
-       
+
+        
+        
       </a>
       </div>
     
@@ -489,11 +503,11 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 
 
- //var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -574,7 +588,29 @@ var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
     KeenIO.log('in home page');
   </script>
 
- 
+ <script type="text/javascript">
+function ShowUpdateLogo(){
+
+try {
+   
+    var logoPan=document.getElementById("update_logo_pan");
+        logoPan.style.display="inline"
+}
+catch (e) {} 
+   
+}
+
+function HideupdateLogo(){
+
+   try{
+    var logoPan=document.getElementById("update_logo_pan");
+        logoPan.style.display="none";
+
+   }catch(e){}
+    
+         
+}
+ </script>
 
  <script src="http://storage.googleapis.com/iogrow-cdn/static_scripts.js" ></script>
  <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
