Change the message of social details by Linkedin details, fix #1492
Former-commit-id: 9d3b0e93c0fee840ae73998694db8d4fb1c1b3b8 [formerly 41e6b68573796b6d4276fa21e23017714b30f063] [formerly 5c49e706215b4bfae15e4458ec23fcc67e272b70 [formerly 891681b26d56ed2f98eee27489642a210a51afed]]
Former-commit-id: 57ff42fdda141b087cf48fc268597f5686e36fae [formerly 9c43308e4aa2a7a2d6d3250c32459e4c6c412fe1]
Former-commit-id: 5aedf63af34a4d777e4e2caecd8ef0006c8fef16

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -155,7 +155,7 @@
                                         <a ng-click="waterfallTrigger();selectedTab = 6;">{{_('Cases')}}</a>
                                     </li> 
                                     <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9, forceHide: noCompanyDetails()}">
-                                        <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Social details')}}</a>
+                                        <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Linkedin details')}}</a>
                                     </li>
                                     <li class="dropdown md-menu-inv">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
