--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -169,7 +169,7 @@
                                         <a ng-click="waterfallTrigger();initTabs('opportunity');selectedTab = 5;">{{ _('Opportunities')}}</a>
                                     </li>
                                     <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9, forceHide: noDetails()}">
-                    <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Details of Lead')}}</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Linkedin details')}}</a>
                   </li>  
                                     <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                                       <a ng-click="selectedTab = 4;">Needs</a>
