--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -164,7 +164,7 @@
                     <a ng-click="waterfallTrigger();initTabs('case');selectedTab = 6;">{{ _('Cases')}}</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9, forceHide: noDetails()}">
-                    <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Details of Contact')}}</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Linkedin details')}}</a>
                   </li>
 
                   <li class="dropdown md-menu-inv">
