add last updated on opprtunity show
Former-commit-id: 2f3383db12f47c6b97a57dcbb0a9d67d6387f645 [formerly 448d03abe8f8f23e8c953ae4e0b18d4230ad7a5a] [formerly 409a8ce70a11f8099926fe1e91a2a8fff5e9b1a7 [formerly 0ea9ee7e9b07f26a32a6df5cb3305e03ab4eaaf6]]
Former-commit-id: 66b3efdc535b088f2ca6ebdd52b2e3f892ab0936 [formerly 44c338db47655b9098b106ea0a50a1ceaf0fc4fe]
Former-commit-id: 1ac9ad17ca5f413c7cadf961c6d0d40b0f5f3a10

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -606,7 +606,7 @@
                                                 </span>
                                               </li>
                                               <li>
-                                                <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(account.updated_at)%> </span>
+                                                <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(opportunity.updated_at)%> </span>
                                               </li>
                                             </ul>
                                         </div>  
