--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -69,7 +69,7 @@
                     <a ng-click="waterfall(); selectedTab = 3;">{{ _('Lead Status')}}</a>
                   </li>
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==4}">
-                    <a ng-click="createPickerUploader()">{{ _('Update your Logo')}}</a>
+                    <a ng-click="waterfall(); selectedTab = 4;">{{ _('Update your Logo')}}</a>
                   </li>
 
 
@@ -199,7 +199,41 @@
 
                       </div>
 
+                      <div class="tab-pane active" id="tab_1_3" ng-show="selectedTab == 4" style="display: none;">
+                  <div class="row cards-container">
+                    <div class="btn-group relbutton">
+                      <button  ng-click="createPickerUploader()" id="sample_editable_1_new" class="btn red">
+                               {{_("Update Logo")}}<i class="icon-plus"></i>
+                      </button>
+                    </div>
+                    <div class="col-md-12">
+                            <div class="row">
+                              <div class="col-md-12 waterfall-lead" ng-hide="blankStateaccount">
+                                <div droppable  ng-repeat="leadstat in leadstatuses" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(contact)" ng-class="{rightcards: getPosition($index)==4}">
+                                    <div class="detailsSection">
+                                      <div class="head">
 
+                                        <div class="text">
+                                            <div class="name">
+                                              <%=leadstat.status%>
+                                            </div>
+                                             <div class="pitch">
+                                                <span class="page-meta"><i class="icon-pencil"><a ng-click="editleadstatus(leadstat)" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i> |<i class="icon-trash"></i>  <a ng-click="deletleadstatus(leadstat)" class="btn-link addAnotherPhone">{{_("Delete")}}</a></span>
+                                              </div>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                      </div>
+                                    </div>
+                            </div>
+                            <div class="clearfix"></div>
+
+                            </div><!--/inner-cards-container-->
+                              </div><!--/inner-cards-container-->
+                              </div>
+                            </div>
+
+
+                      </div>
 
 
 
