add message for update logo
Former-commit-id: e8c9c865f2f065dd5b6e7a245874312919bf48a4 [formerly 5d89c059f624d6e8e7e29cef2267468ba3df7f47] [formerly 3170082b9d1b5be210bdfd8e8da789878a648fbd [formerly 99922896f61140a51b4614bfed6860030030fd48]]
Former-commit-id: 6944052007d10d351b05ef24e3df65111b7c81f2 [formerly 540bb62a1326af27597746415e93cbfb8f55cde7]
Former-commit-id: 336d3e01a6458e09b6d1ad58c8b7d22bdfe96fd9

--- a/templates/base.html
+++ b/templates/base.html
@@ -165,6 +165,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
       <input type="hidden" id="license_is_expired" value="{{license_is_expired}}" />
       <input type="hidden" id="user_suspended" value="{{user_suspended}}"/>
+      <input type="hidden" id="active_app" value="{{active_app.url}}"/>
 
         <ul class="nav navbar-nav pull-right">
 
