--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -209,22 +209,15 @@
                     <div class="col-md-12">
                             <div class="row">
                               <div class="col-md-12 waterfall-lead" ng-hide="blankStateaccount">
-                                <div droppable  ng-repeat="leadstat in leadstatuses" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(contact)" ng-class="{rightcards: getPosition($index)==4}">
-                                    <div class="detailsSection">
-                                      <div class="head">
 
-                                        <div class="text">
-                                            <div class="name">
-                                              <%=leadstat.status%>
-                                            </div>
-                                             <div class="pitch">
-                                                <span class="page-meta"><i class="icon-pencil"><a ng-click="editleadstatus(leadstat)" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i> |<i class="icon-trash"></i>  <a ng-click="deletleadstatus(leadstat)" class="btn-link addAnotherPhone">{{_("Delete")}}</a></span>
-                                              </div>
-                                        </div>
-                                        <div class="clearfix"></div>
-                                      </div>
-                                    </div>
-                            </div>
+                              <div class="dashboard-stat cards">
+                                                 <div class="blank_slate_arrow"></div>
+                                                 <div class=" thumbnail blank_slate_body">
+                                                    <img src="/static/img/leads_blank.png" class="img-responsive">
+                                                      <p class="lead">{{_('Update your Logo and make your brand your culture.')}}</p>
+                                                 </div>
+                                             </div>
+                              
                             <div class="clearfix"></div>
 
                             </div><!--/inner-cards-container-->
