Delete Lead Is not Working on show page fix#1482 Delete some cases is not working fix#1484 when we create Case, we must indicate that account is mondatory fix#1485
Former-commit-id: 34458842e80b1d11f99361c36a5deca5325863b4 [formerly 28b341cd7d393a12c65e97a86fd83d8cbba3d09a] [formerly d608c873fc02e27495e7553032de0a346c005531 [formerly e6ac8b6483f46a42abebcd1c164fba9b1f2eec7e]]
Former-commit-id: b006d2cc0a8e661c245a63f14f94811a6e982e5f [formerly 3c127a26b0ea3f84ba2ab61c56723c210e3185d7]
Former-commit-id: a2e2f1102978188a1244ed9fdf29e127792a2a40

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -646,7 +646,7 @@
               <div class="modal-footer">
                 <button ng-click="selectedCards=[]" class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                <input  ng-click="deletecase()" type="submit" class="btn red" value="Delete this Case">
+                <input  ng-click="deleteSelection()" type="submit" class="btn red" value="Delete this Case">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                </form>
