fixing case list bug after changing account list cards design fix #1489
Former-commit-id: bab2c58cafc7675f229df51591db920471c172df [formerly a34110115125dac33126767ebba03d0d4722ac10] [formerly 1ee86dc91e5ffd1fd78e161a46faf58a3282e558 [formerly c4bbcfc8cd7ff01faef4d679fb71215d7e8edff4]]
Former-commit-id: 71684da2c8d1b367834dea997b6aa0059770c9c5 [formerly 2471dc0faa218f49f94988ed043eeca6a5ed4e50]
Former-commit-id: 3e150487dad08b83b36c59c313416dd572fbefe4

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -336,7 +336,7 @@
                  </div>
             </div>
         </div>
-        <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" >
+        <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" id="accountCardsContainer">
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
@@ -382,7 +382,7 @@
               </button>
             </div>
         </div>
-          <div ng-repeat="account in accounts"  ng-class="{selectedCard: isSelectedCard(account)}" droppable  id="card_<%=$index%>" class="cardElement" ng-drop="dropTag(account,$index)">
+          <div ng-repeat="account in accounts"  ng-class="{selectedCard: isSelectedCard(account)}" droppable  id="card_<%=$index%>" class="cardElement accountCard" ng-drop="dropTag(account,$index)">
            <div class="btn-group inCardOptionsBtn">
             <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
              <i class="fa fa-ellipsis-vertical"></i>
@@ -655,12 +655,11 @@
   };
   handleUniform();
   $('.waterfall').waterfall({
-        colMinWidth: 210,
+        colMinWidth: 290,
         defaultContainerWidth: 800,
         autoresize: true
   });
-  $( window ).resize(function() {
-   
+  $('#accountCardsContainer').resize(function() {
     var cw = $('#card_0').width();
     console.log(cw);
     if (cw==0 && localStorage['accountShow']!='list') {
