[Task Show] - when clicking on user redirect them to the page admin user show for example(/#/admin/users/show/113922868133293389201), fix #1500,[Task Show] - Possibility of delete an assignee from Task , fix #1499 ,Delete the sign @ on list task,fix  #1498
Former-commit-id: e147d79b25a0f651089e19271dac93499b64938d [formerly ed7bcb3fbbd07ed86cbfd883e277d461d29d277e] [formerly 365496626c78a93b85910ef5bec0050a0a2a1e59 [formerly 794c7db882f99f6e783d1cc4c1ea3584c1dbd6f4]]
Former-commit-id: 8b47b591148702477d16d382d657a3d8808f8568 [formerly 03375ef5389f0462d8c0977ffb861d23f51be7be]
Former-commit-id: fc59c68868b717385e77f80ecce83efb8822905e

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -216,11 +216,13 @@
         </div>
          <div class="row margin-bottom-15">
           <div class="col-md-12">
-              <ul class="list-unstyled showTagsList">
+              <ul class="list-unstyled showTagsList relatedTags">
                  <li ng-show="task.assignees" class="inline-tags">{{ _('Assignees:')}}</li>
                  <li ng-repeat="assignee in task.assignees" class="inline-tags">
-                   <a  href="#" editoptions editdataattr="deleteassignee('<%= assignee.edgeKey %>')" class="pull-left task-label task-tag">
-                        <span class="">
+                  <span  ng-click="deleteassignee('<%= assignee.edgeKey %>')" class="pull-left removeRelatedTag select2-search-choice-close" > </span>
+                   <a  href="/#/admin/users/show/<%=assignee.google_user_id%>" editoptions editdataattr="deleteassignee('<%= assignee.edgeKey %>')" class="pull-left task-label task-tag">
+                  
+                        <span class="" style="font-size:11px;">
                           <%= assignee.display_name %>                                                     
                         </span>
                          <div class="clearfix"></div>
