--- a/templates/admin/users/user_show.html
+++ b/templates/admin/users/user_show.html
@@ -267,7 +267,7 @@
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
-                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>"> @<%= assignee.display_name %></a>
+                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>"> <%= assignee.display_name %></a>
                                                <img alt="" src="<%= assignee.photo%>" class="user-photo" />
                                             </span>
                                         </div>
