--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -400,7 +400,7 @@
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
-                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>"> @<%= assignee.display_name %>
+                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>"> <%= assignee.display_name %>
                                                  <img alt="" src="<%= assignee.photo%>" class="user-photo" />
                                                </a>
                                             </span>
