--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -23,8 +23,8 @@
           <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Tweets')}} 
            </span>
           
-          <span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
-          
+         <!--  <span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
+           -->
           <!-- <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span -->
           
           
@@ -223,6 +223,7 @@
        
           <div class="detailsSection">
              <div class="head">
+             
               <div class="pic">
                       <a href="/#/discovers/show/<%= tweet.idp %>*" ng-click="details_of_tweets(tweet.idp)"   target="new" class="startup-link" title="account.name">
                 
@@ -234,8 +235,8 @@
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
 
-                   <a href="/#/discovers/show/<%= tweet.idp %>*" target="new" class="profile-link">
-                      <%= tweet.screen_name %>
+                   <a href="/#/discovers/show/<%= tweet._source.id %>*" target="new" class="profile-link">
+                      <%= tweet._source.user.name %>
                    </a>
                 </div>
                 
@@ -243,8 +244,8 @@
           </div> 
           <div class="textbody">
               <div class="pitch">
-                <a href="/#/discovers/show/<%= tweet.idp %>" target="new"  >
-                <p  class="contact-title"> <%=tweet.text%>
+                <a href="/#/discovers/show/<%= tweet._source.id %>" target="new"  >
+                <p  class="contact-title"> <%=tweet._source.text%>
                 </p>
               </a>
               </div>
