--- a/templates/discovers/discover_show.html
+++ b/templates/discovers/discover_show.html
@@ -147,7 +147,7 @@
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <%=tweet_details.name%>
+                                                        <%=tweet_details._source.user.screen_name%>
                                                     </li>
                                                 </ul>
 
@@ -157,7 +157,7 @@
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <%=tweet_details.description%>
+                                                        <%=tweet_details._source.user.description%>
                                                     </li>
                                                 </ul>
                        
@@ -167,19 +167,20 @@
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <%=tweet_details.followers_count%>
+                                                        <%=tweet_details._source.user.followers_count%>
                                                     </li>
                                                 </ul>
                          
-                        <!--   <div class="news-block-tags">
+                         <div class="news-block-tags">
                           <strong>{{ _('Number of favorite: ')}}</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <%=tweet_details.favorites_count%>
+                                                        <%=tweet_details._source.user.favorites_count%>
                                                     </li>
-                                                </ul>                        
+                                                </ul> 
+                             <!--                                            
                          <div class="news-block-tags">
                           <strong>{{ _('Author statuses count: ')}}</strong>
                         </div>
@@ -204,7 +205,7 @@
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <%=tweet_details.author_location%>
+                                                        <%=tweet_details._source.user.location%>
                                                     </li>
                                                 </ul>                                        
                         <!-- <div class="news-block-tags">
@@ -243,7 +244,7 @@
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <a target="new" href="http://twitter.com/<%=tweet_details.screen_name %>">http://twitter.com/<%=tweet_details.screen_name %></a>
+                                                        <a target="new" href="http://twitter.com/<%=tweet_details.screen_name %>">http://twitter.com/<%=tweet_details._source.user.screen_name %></a>
                                                    </li>
                                                 </ul>                      
                            
@@ -264,7 +265,7 @@
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <%=tweet_details.text%>
+                                                        <%=tweet_details._source.text%>
                                                     </li>
                                                 </ul>
 
@@ -303,7 +304,7 @@
                           <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                        <a href="http://twitter.com/<%=tweet_details.screen_name %>/status/<%= tweet_details.idp %>" target="new" > http://twitter.com/<%=tweet_details.screen_name %>/status/<%= tweet_details.idp %> </a>  
+                        <a href="http://twitter.com/<%=tweet_details.screen_name %>/status/<%= tweet_details.idp %>" target="new" > http://twitter.com/<%=tweet_details._source.user.screen_name %>/status/<%= tweet_details._source.id %> </a>  
                           </li>
                                                 </ul>     
                       </div>
